# virtualkeyboard_by_qtgraphic

./: CMakeLists.txt
src/: key_item.cpp  key_item.h  keyboard_view.cpp  keyboard_view.h  main.cpp  main_widget.cpp  main_widget.h
